deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master-normal
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: master
  template:
    metadata:
      labels:
        app: master
    spec:
      containers:
      - name: master
        image: master:latest
        imagePullPolicy: IfNotPresent 
        ports:
        - containerPort: 80
        args: ["--A", "$(SERVER_IP)", "--id", "$(CONTAINER_IP)"]
        command: ["./master"]

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 5
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: worker:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        args: ["--port", "$(SERVICE_PORT)"]
        command: ["./worker"]
