fail_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master-fail
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: master
  template:
    metadata:
      labels:
        app: master
        role: fail
    spec:
      containers:
      - name: master
        image: master:latest
        imagePullPolicy: IfNotPresent 
        ports:
        - containerPort: 80
        args: ["--A", "$(SERVER_IP)", "--id", "$(CONTAINER_IP)", "--fail", "$(FAIL)"]
        command: ["./master"]

---
---
apiVersion: v1
kind: Service
metadata:
  name: mapreduce-service
spec:
  type: ClusterIP
  clusterIP: 10.96.222.72
  selector:
    app: worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  
---
apiVersion: v1
kind: Service
metadata:
  name: master-service
spec:
  type: NodePort
  selector:
    app: master
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master-ingress
  namespace: mr
spec:
  ingressClassName: nginx
  rules:
  - host: master.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: master-service
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: master-headless
  namespace: mr
spec:
  clusterIP: None
  selector:
    app: master
  ports:
  - port: 5050
    targetPort: 5050
  
---
apiVersion: v1
kind: Service
metadata:
  name: worker-headless
  namespace: mr
spec:
  clusterIP: None
  selector:
    app: worker
  ports:
  - port: 80
    targetPort: 80
